test for one DCM

--- a/IDA_DcmToJpeg.ipynb
+++ b/IDA_DcmToJpeg.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNux0qDW8g1OtxCfw7YcZqL",
+      "authorship_tag": "ABX9TyNrbwPyih0YMewgikFN8kso",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -80,34 +80,15 @@
         "    image.save(jpg_path, \"JPEG\")\n",
         "\n",
         "# Example usage\n",
-        "dcm_file_path = \"DCM/input.dcm\"  # Path to your DICOM file\n",
+        "dcm_file_path = \"/content/ADNI_127_S_4148_MR_Accelerated_Sagittal_IR-FSPGR__br_raw_20170719160428801_136_S585683_I876746.dcm\"  # Path to your DICOM file\n",
         "jpg_file_path = \"output.jpg\"  # Path to save the JPEG file\n",
         "dcm_to_jpg(dcm_file_path, jpg_file_path)"
       ],
       "metadata": {
-        "id": "aZfxlQ3vaOjW",
-        "outputId": "45ef4554-2921-47ac-8580-acb6291d0568",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 338
-        }
+        "id": "aZfxlQ3vaOjW"
       },
-      "execution_count": 3,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "FileNotFoundError",
-          "evalue": "[Errno 2] No such file or directory: 'input.dcm'",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-3-4705e46bdee0>\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     23\u001b[0m \u001b[0mdcm_file_path\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"input.dcm\"\u001b[0m  \u001b[0;31m# Path to your DICOM file\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     24\u001b[0m \u001b[0mjpg_file_path\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"output.jpg\"\u001b[0m  \u001b[0;31m# Path to save the JPEG file\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 25\u001b[0;31m \u001b[0mdcm_to_jpg\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdcm_file_path\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mjpg_file_path\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;32m<ipython-input-3-4705e46bdee0>\u001b[0m in \u001b[0;36mdcm_to_jpg\u001b[0;34m(dcm_path, jpg_path)\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mdcm_to_jpg\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdcm_path\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mjpg_path\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m     \u001b[0;31m# Read the DICOM file\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m     \u001b[0mdicom_data\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpydicom\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdcmread\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdcm_path\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      8\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m     \u001b[0;31m# Extract the pixel array (image data)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.11/dist-packages/pydicom/filereader.py\u001b[0m in \u001b[0;36mdcmread\u001b[0;34m(fp, defer_size, stop_before_pixels, force, specific_tags)\u001b[0m\n\u001b[1;32m   1040\u001b[0m         \u001b[0mcaller_owns_file\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mFalse\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1041\u001b[0m         \u001b[0mlogger\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdebug\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf\"Reading file '{fp}'\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1042\u001b[0;31m         \u001b[0mfp\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfp\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"rb\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1043\u001b[0m     elif (\n\u001b[1;32m   1044\u001b[0m         \u001b[0mfp\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'input.dcm'"
-          ]
-        }
-      ]
+      "execution_count": 4,
+      "outputs": []
     }
   ]
 }
