added another type with description

--- a/IDA_DcmToJpeg.ipynb
+++ b/IDA_DcmToJpeg.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNrbwPyih0YMewgikFN8kso",
+      "authorship_tag": "ABX9TyOOxSDOc3XPOD9Sa2NO9/g8",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -88,6 +88,39 @@
         "id": "aZfxlQ3vaOjW"
       },
       "execution_count": 4,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import pydicom\n",
+        "\n",
+        "# Path to your DICOM file\n",
+        "dicom_path = \"your_file_path.dcm\"\n",
+        "\n",
+        "# Read the DICOM file\n",
+        "ds = pydicom.dcmread(dicom_path)\n",
+        "\n",
+        "# Extract key metadata\n",
+        "metadata = {\n",
+        "    \"Patient ID\": ds.PatientID if \"PatientID\" in ds else \"N/A\",\n",
+        "    \"Study Date\": ds.StudyDate if \"StudyDate\" in ds else \"N/A\",\n",
+        "    \"Modality\": ds.Modality if \"Modality\" in ds else \"N/A\",\n",
+        "    \"Series Description\": ds.SeriesDescription if \"SeriesDescription\" in ds else \"N/A\",\n",
+        "    \"Protocol Name\": ds.ProtocolName if \"ProtocolName\" in ds else \"N/A\",\n",
+        "    \"Image Type\": ds.ImageType if \"ImageType\" in ds else \"N/A\",\n",
+        "    \"Manufacturer\": ds.Manufacturer if \"Manufacturer\" in ds else \"N/A\",\n",
+        "    \"Magnetic Field Strength\": ds.MagneticFieldStrength if \"MagneticFieldStrength\" in ds else \"N/A\"\n",
+        "}\n",
+        "\n",
+        "# Print metadata\n",
+        "for key, value in metadata.items():\n",
+        "    print(f\"{key}: {value}\")\n"
+      ],
+      "metadata": {
+        "id": "8NVk28qwkEKd"
+      },
+      "execution_count": null,
       "outputs": []
     }
   ]
