--- a/IDA_DcmToJpeg.ipynb
+++ b/IDA_DcmToJpeg.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOOxSDOc3XPOD9Sa2NO9/g8",
+      "authorship_tag": "ABX9TyN2M/O2bWgeaenga1WezUNd",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,13 +28,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 3,
       "metadata": {
         "id": "1vuS2HF0WE_t",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "c8db2aa6-5282-4763-b024-d8313853c05f"
+        "outputId": "0138a3e8-aa53-4b46-a443-6b4def25fb79"
       },
       "outputs": [
         {
@@ -45,7 +45,7 @@
             "  Downloading pydicom-3.0.1-py3-none-any.whl.metadata (9.4 kB)\n",
             "Requirement already satisfied: pillow in /usr/local/lib/python3.11/dist-packages (11.1.0)\n",
             "Downloading pydicom-3.0.1-py3-none-any.whl (2.4 MB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m2.4/2.4 MB\u001b[0m \u001b[31m13.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m2.4/2.4 MB\u001b[0m \u001b[31m19.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hInstalling collected packages: pydicom\n",
             "Successfully installed pydicom-3.0.1\n"
           ]
@@ -96,7 +96,7 @@
         "import pydicom\n",
         "\n",
         "# Path to your DICOM file\n",
-        "dicom_path = \"your_file_path.dcm\"\n",
+        "dicom_path = \"/content/ADNI_127_S_4148_MR_Accelerated_Sagittal_IR-FSPGR__br_raw_20170719160428801_136_S585683_I876746.dcm\"\n",
         "\n",
         "# Read the DICOM file\n",
         "ds = pydicom.dcmread(dicom_path)\n",
@@ -118,10 +118,29 @@
         "    print(f\"{key}: {value}\")\n"
       ],
       "metadata": {
-        "id": "8NVk28qwkEKd"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "8NVk28qwkEKd",
+        "outputId": "bf677a98-9b2b-4a30-99b7-34151ecf806e"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Patient ID: 127_S_4148\n",
+            "Study Date: 20170718\n",
+            "Modality: MR\n",
+            "Series Description: Accelerated Sagittal IR-FSPGR\n",
+            "Protocol Name: ADNI3 Basic Human Protoc\n",
+            "Image Type: ['ORIGINAL', 'PRIMARY', 'OTHER']\n",
+            "Manufacturer: GE MEDICAL SYSTEMS\n",
+            "Magnetic Field Strength: 3\n"
+          ]
+        }
+      ]
     }
   ]
 }
