added Step 1: Load and Preprocess the MRI Dataset

--- a/MRtoCT.ipynb
+++ b/MRtoCT.ipynb
@@ -2793,6 +2793,25 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Apr4"
+      ],
+      "metadata": {
+        "id": "_SqPK1jEd0WG"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Step 1: Load and Preprocess the MRI Dataset\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "Whwgh8QBd_qL"
+      }
     }
   ]
 }
