--- a/MRtoCT.ipynb
+++ b/MRtoCT.ipynb
@@ -437,6 +437,114 @@
       "metadata": {
         "id": "zPYZFBBMpvo0"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Residual Block\n",
+        "class ResidualBlock(nn.Module):\n",
+        "    def __init__(self, in_channels):\n",
+        "        super(ResidualBlock, self).__init__()\n",
+        "        self.block = nn.Sequential(\n",
+        "            nn.Conv2d(in_channels, in_channels, kernel_size=3, stride=1, padding=1),\n",
+        "            nn.InstanceNorm2d(in_channels),\n",
+        "            nn.ReLU(inplace=True),\n",
+        "            nn.Conv2d(in_channels, in_channels, kernel_size=3, stride=1, padding=1),\n",
+        "            nn.InstanceNorm2d(in_channels)\n",
+        "        )\n",
+        "\n",
+        "    def forward(self, x):\n",
+        "        return x + self.block(x)  # Skip connection\n",
+        "\n",
+        "# Generator\n",
+        "class Generator(nn.Module):\n",
+        "    def __init__(self):\n",
+        "        super(Generator, self).__init__()\n",
+        "        self.encoder = nn.Sequential(\n",
+        "            nn.Conv2d(1, 64, kernel_size=7, stride=1, padding=3),\n",
+        "            nn.InstanceNorm2d(64),\n",
+        "            nn.ReLU(inplace=True),\n",
+        "            nn.Conv2d(64, 128, kernel_size=3, stride=2, padding=1),\n",
+        "            nn.InstanceNorm2d(128),\n",
+        "            nn.ReLU(inplace=True),\n",
+        "            nn.Conv2d(128, 256, kernel_size=3, stride=2, padding=1),\n",
+        "            nn.InstanceNorm2d(256),\n",
+        "            nn.ReLU(inplace=True)\n",
+        "        )\n",
+        "\n",
+        "        self.res_blocks = nn.Sequential(*[ResidualBlock(256) for _ in range(9)])\n",
+        "\n",
+        "        self.decoder = nn.Sequential(\n",
+        "            nn.ConvTranspose2d(256, 128, kernel_size=3, stride=2, padding=1, output_padding=1),\n",
+        "            nn.InstanceNorm2d(128),\n",
+        "            nn.ReLU(inplace=True),\n",
+        "            nn.ConvTranspose2d(128, 64, kernel_size=3, stride=2, padding=1, output_padding=1),\n",
+        "            nn.InstanceNorm2d(64),\n",
+        "            nn.ReLU(inplace=True),\n",
+        "            nn.Conv2d(64, 1, kernel_size=7, stride=1, padding=3),\n",
+        "            nn.Tanh()\n",
+        "        )\n",
+        "\n",
+        "    def forward(self, x):\n",
+        "        x = self.encoder(x)\n",
+        "        x = self.res_blocks(x)\n",
+        "        x = self.decoder(x)\n",
+        "        return x\n",
+        "\n",
+        "# Initialize Generators\n",
+        "G_MRI_to_CT = Generator().to(device)\n",
+        "G_CT_to_MRI = Generator().to(device)"
+      ],
+      "metadata": {
+        "id": "nixKr4f4p0jn"
+      },
+      "execution_count": 11,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Step 4: Define the Discriminators"
+      ],
+      "metadata": {
+        "id": "z7LWfheGp74f"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Discriminator (both Appearance and Structural)\n",
+        "class Discriminator(nn.Module):\n",
+        "    def __init__(self):\n",
+        "        super(Discriminator, self).__init__()\n",
+        "        self.model = nn.Sequential(\n",
+        "            nn.Conv2d(1, 64, kernel_size=4, stride=2, padding=1),\n",
+        "            nn.LeakyReLU(0.2, inplace=True),\n",
+        "            nn.Conv2d(64, 128, kernel_size=4, stride=2, padding=1),\n",
+        "            nn.InstanceNorm2d(128),\n",
+        "            nn.LeakyReLU(0.2, inplace=True),\n",
+        "            nn.Conv2d(128, 256, kernel_size=4, stride=2, padding=1),\n",
+        "            nn.InstanceNorm2d(256),\n",
+        "            nn.LeakyReLU(0.2, inplace=True),\n",
+        "            nn.Conv2d(256, 512, kernel_size=4, stride=1, padding=1),\n",
+        "            nn.InstanceNorm2d(512),\n",
+        "            nn.LeakyReLU(0.2, inplace=True),\n",
+        "            nn.Conv2d(512, 1, kernel_size=4, stride=1, padding=1),\n",
+        "            nn.Sigmoid()\n",
+        "        )\n",
+        "\n",
+        "    def forward(self, x):\n",
+        "        return self.model(x)\n",
+        "\n",
+        "# Initialize Discriminators\n",
+        "D_MRI = Discriminator().to(device)  # For MRI domain\n",
+        "D_CT = Discriminator().to(device)   # For CT domain"
+      ],
+      "metadata": {
+        "id": "YXr4WEOBp_L5"
+      },
+      "execution_count": 12,
+      "outputs": []
     }
   ],
   "metadata": {
