added Step 6: Training Loop (With Placeholder)

--- a/MRtoCT.ipynb
+++ b/MRtoCT.ipynb
@@ -545,6 +545,59 @@
       },
       "execution_count": 12,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Step 5: Define Loss Functions and Optimizers"
+      ],
+      "metadata": {
+        "id": "xLiI-RsrqKxy"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Loss functions\n",
+        "adversarial_loss = nn.BCELoss()\n",
+        "cycle_loss = nn.L1Loss()\n",
+        "identity_loss = nn.L1Loss()\n",
+        "\n",
+        "# Optimizers\n",
+        "optimizer_G = optim.Adam(\n",
+        "    list(G_MRI_to_CT.parameters()) + list(G_CT_to_MRI.parameters()),\n",
+        "    lr=0.0002, betas=(0.5, 0.999)\n",
+        ")\n",
+        "optimizer_D_MRI = optim.Adam(D_MRI.parameters(), lr=0.0002, betas=(0.5, 0.999))\n",
+        "optimizer_D_CT = optim.Adam(D_CT.parameters(), lr=0.0002, betas=(0.5, 0.999))\n",
+        "\n",
+        "# Labels for adversarial loss\n",
+        "real_label = torch.ones((4, 1, 8, 8)).to(device)  # Adjust size based on output\n",
+        "fake_label = torch.zeros((4, 1, 8, 8)).to(device)"
+      ],
+      "metadata": {
+        "id": "ZWhLgBs6qOtI"
+      },
+      "execution_count": 13,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Step 6: Training Loop (With Placeholder)"
+      ],
+      "metadata": {
+        "id": "Y4YLCYuhqTyy"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "fP-EQTAmqTSu"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
