added Step 5: Training Loop

--- a/MRtoCT.ipynb
+++ b/MRtoCT.ipynb
@@ -489,6 +489,15 @@
       },
       "execution_count": 4,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Step 5: Training Loop"
+      ],
+      "metadata": {
+        "id": "Ab9Rxgd7sXgq"
+      }
     }
   ],
   "metadata": {
