define training loop

--- a/MRtoCT.ipynb
+++ b/MRtoCT.ipynb
@@ -913,6 +913,138 @@
       },
       "execution_count": 11,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Loss functions\n",
+        "adversarial_loss = nn.BCELoss()\n",
+        "l1_loss = nn.L1Loss()\n",
+        "\n",
+        "# Heuristic losses for CT-like features\n",
+        "def edge_loss(fake_ct):\n",
+        "    # Apply Sobel filter to emphasize edges (CT images highlight bone structures)\n",
+        "    sobel_x = torch.tensor([[-1, 0, 1], [-2, 0, 2], [-1, 0, 1]], dtype=torch.float32).to(device)\n",
+        "    sobel_y = torch.tensor([[-1, -2, -1], [0, 0, 0], [1, 2, 1]], dtype=torch.float32).to(device)\n",
+        "    sobel_x = sobel_x.view(1, 1, 3, 3)\n",
+        "    sobel_y = sobel_y.view(1, 1, 3, 3)\n",
+        "\n",
+        "    edge_x = F.conv2d(fake_ct, sobel_x, padding=1)\n",
+        "    edge_y = F.conv2d(fake_ct, sobel_y, padding=1)\n",
+        "    edges = torch.sqrt(edge_x**2 + edge_y**2)\n",
+        "    return -torch.mean(edges)  # Encourage more edges (negative to maximize)\n",
+        "\n",
+        "def contrast_loss(fake_ct):\n",
+        "    # Encourage high contrast (CT images have high contrast between bone and soft tissue)\n",
+        "    mean = torch.mean(fake_ct, dim=(2, 3), keepdim=True)\n",
+        "    variance = torch.mean((fake_ct - mean)**2, dim=(2, 3))\n",
+        "    return -torch.mean(variance)  # Encourage higher variance (negative to maximize)\n",
+        "\n",
+        "def smoothness_loss(fake_ct):\n",
+        "    # Penalize repetitive patterns like stripes by encouraging smoothness in non-edge areas\n",
+        "    diff_x = fake_ct[:, :, :, 1:] - fake_ct[:, :, :, :-1]\n",
+        "    diff_y = fake_ct[:, :, 1:, :] - fake_ct[:, :, :-1, :]\n",
+        "    return torch.mean(torch.abs(diff_x)) + torch.mean(torch.abs(diff_y))  # Minimize differences (encourage smoothness)\n",
+        "\n",
+        "# Optimizers\n",
+        "optimizer_G = optim.Adam(G.parameters(), lr=0.0002, betas=(0.5, 0.999))\n",
+        "optimizer_D = optim.Adam(D.parameters(), lr=0.0002, betas=(0.5, 0.999))"
+      ],
+      "metadata": {
+        "id": "wA_5LvYFyk58"
+      },
+      "execution_count": 12,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Training Loop\n",
+        "num_epochs = 1  # Increased epochs for better learning\n",
+        "lambda_edge = 5.0  # Reduced weight\n",
+        "lambda_contrast = 2.0  # Reduced weight\n",
+        "lambda_smoothness = 1.0  # New smoothness loss weight\n",
+        "\n",
+        "for epoch in range(num_epochs):\n",
+        "    for i, mri_images in enumerate(dataloader):\n",
+        "        mri_images = mri_images.to(device)\n",
+        "        batch_size = mri_images.size(0)\n",
+        "\n",
+        "        # Define labels with label smoothing\n",
+        "        real_label = torch.full((batch_size, 1, 14, 14), 0.9).to(device)  # Label smoothing: 0.9 instead of 1\n",
+        "        fake_label = torch.full((batch_size, 1, 14, 14), 0.1).to(device)  # Label smoothing: 0.1 instead of 0\n",
+        "\n",
+        "        # Train Discriminator (train twice per iteration for stability)\n",
+        "        for _ in range(2):\n",
+        "            optimizer_D.zero_grad()\n",
+        "\n",
+        "            # Fake images\n",
+        "            fake_ct = G(mri_images)\n",
+        "            fake_pred = D(mri_images, fake_ct.detach())\n",
+        "            loss_D_fake = adversarial_loss(fake_pred, fake_label)\n",
+        "\n",
+        "            # Improved pseudo-CT: Edge detection + intensity thresholding to mimic bone structures\n",
+        "            with torch.no_grad():\n",
+        "                # Edge detection\n",
+        "                sobel_x = torch.tensor([[-1, 0, 1], [-2, 0, 2], [-1, 0, 1]], dtype=torch.float32).to(device)\n",
+        "                sobel_y = torch.tensor([[-1, -2, -1], [0, 0, 0], [1, 2, 1]], dtype=torch.float32).to(device)\n",
+        "                sobel_x = sobel_x.view(1, 1, 3, 3)\n",
+        "                sobel_y = sobel_y.view(1, 1, 3, 3)\n",
+        "                edge_x = F.conv2d(mri_images, sobel_x, padding=1)\n",
+        "                edge_y = F.conv2d(mri_images, sobel_y, padding=1)\n",
+        "                edges = torch.sqrt(edge_x**2 + edge_y**2)\n",
+        "                # Intensity thresholding to mimic bone (high intensity in CT)\n",
+        "                pseudo_ct = torch.where(mri_images > 0.5, edges, mri_images * 0.2)  # Highlight high-intensity areas\n",
+        "                pseudo_ct = torch.tanh(pseudo_ct)  # Normalize to [-1, 1]\n",
+        "\n",
+        "            real_pred = D(mri_images, pseudo_ct)\n",
+        "            loss_D_real = adversarial_loss(real_pred, real_label)\n",
+        "\n",
+        "            # Total Discriminator Loss\n",
+        "            loss_D = (loss_D_real + loss_D_fake) * 0.5\n",
+        "            loss_D.backward()\n",
+        "            optimizer_D.step()\n",
+        "\n",
+        "        # Train Generator\n",
+        "        optimizer_G.zero_grad()\n",
+        "\n",
+        "        fake_ct = G(mri_images)\n",
+        "        fake_pred = D(mri_images, fake_ct)\n",
+        "        loss_G_adv = adversarial_loss(fake_pred, real_label)\n",
+        "        loss_G_edge = edge_loss(fake_ct)\n",
+        "        loss_G_contrast = contrast_loss(fake_ct)\n",
+        "        loss_G_smoothness = smoothness_loss(fake_ct)\n",
+        "\n",
+        "        # Total Generator Loss\n",
+        "        loss_G = loss_G_adv + lambda_edge * loss_G_edge + lambda_contrast * loss_G_contrast + lambda_smoothness * loss_G_smoothness\n",
+        "        loss_G.backward()\n",
+        "        optimizer_G.step()\n",
+        "\n",
+        "        if i % 50 == 0:\n",
+        "            print(f\"Epoch [{epoch+1}/{num_epochs}] Batch [{i}/{len(dataloader)}] \"\n",
+        "                  f\"Loss_D: {loss_D.item():.4f} Loss_G: {loss_G.item():.4f}\")\n",
+        "\n",
+        "    # Save models\n",
+        "    torch.save(G.state_dict(), f'cGAN_G_epoch_{epoch+1}.pth')"
+      ],
+      "metadata": {
+        "id": "MUgoUCrVyqQT",
+        "outputId": "8bb59e30-b96c-4e90-9c3b-d4033ec402a8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Epoch [1/1] Batch [0/1280] Loss_D: 1.1302 Loss_G: -4.6156\n",
+            "Epoch [1/1] Batch [50/1280] Loss_D: 0.3261 Loss_G: -37.6956\n"
+          ]
+        }
+      ]
     }
   ],
   "metadata": {
