--- a/MRtoCT.ipynb
+++ b/MRtoCT.ipynb
@@ -1254,7 +1254,7 @@
         "            nn.Conv2d(256, 512, kernel_size=4, stride=2, padding=1),  # 16x16 -> 8x8\n",
         "            nn.InstanceNorm2d(512),\n",
         "            nn.LeakyReLU(0.2, inplace=True),\n",
-        "            nn.Conv2d(512, 1, kernel_size=4, stride=1, padding=1),  # 8x8 -> 8x8\n",
+        "            nn.Conv2d(512, 1, kernel_size=3, stride=1, padding=1),  # 8x8 -> 8x8\n",
         "            nn.Sigmoid()\n",
         "        )\n",
         "\n",
@@ -1264,8 +1264,73 @@
       "metadata": {
         "id": "WDF9fCKV0fCJ"
       },
-      "execution_count": 20,
+      "execution_count": 24,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Labels with smoothing\n",
+        "real_label = torch.full((batch_size, 1, 7, 7), 0.9).to(device)\n",
+        "fake_label = torch.full((batch_size, 1, 7, 7), 0.1).to(device)"
+      ],
+      "metadata": {
+        "id": "l9kflJee1N8u"
+      },
+      "execution_count": 25,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# --- Train Discriminators ---\n",
+        "# Appearance Discriminator (CT domain)\n",
+        "optimizer_D_app.zero_grad()\n",
+        "fake_ct = G_mri_to_ct(mri_images)\n",
+        "real_pred_app_ct = D_app_ct(real_ct)\n",
+        "fake_pred_app_ct = D_app_ct(fake_ct.detach())\n",
+        "loss_D_app_ct = (adversarial_loss(real_pred_app_ct, real_label) + adversarial_loss(fake_pred_app_ct, fake_label)) * 0.5\n",
+        "\n",
+        "# Appearance Discriminator (MRI domain)\n",
+        "fake_mri = G_ct_to_mri(real_ct)\n",
+        "real_pred_app_mri = D_app_mri(mri_images)\n",
+        "fake_pred_app_mri = D_app_mri(fake_mri.detach())\n",
+        "loss_D_app_mri = (adversarial_loss(real_pred_app_mri, real_label) + adversarial_loss(fake_pred_app_mri, fake_label)) * 0.5\n",
+        "\n",
+        "loss_D_app = loss_D_app_ct + loss_D_app_mri\n",
+        "loss_D_app.backward()\n",
+        "optimizer_D_app.step()"
+      ],
+      "metadata": {
+        "id": "H1tr0opb1PnU"
+      },
+      "execution_count": 26,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"Discriminator output shape:\", real_pred_app_ct.shape)\n",
+        "print(\"Label shape:\", real_label.shape)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "F6aSXbCX1Rw3",
+        "outputId": "e6ac9826-419f-462c-b6a2-070cbf63a86b"
+      },
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Discriminator output shape: torch.Size([4, 1, 7, 7])\n",
+            "Label shape: torch.Size([4, 1, 7, 7])\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -1457,6 +1522,59 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# New tr"
+      ],
+      "metadata": {
+        "id": "UTyV3aij1bS1"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class Discriminator(nn.Module):\n",
+        "    def __init__(self, in_channels=1):\n",
+        "        super(Discriminator, self).__init__()\n",
+        "        self.model = nn.Sequential(\n",
+        "            nn.Conv2d(in_channels, 64, kernel_size=4, stride=2, padding=1),  # 128x128 -> 64x64\n",
+        "            nn.LeakyReLU(0.2, inplace=True),\n",
+        "            nn.Conv2d(64, 128, kernel_size=4, stride=2, padding=1),  # 64x64 -> 32x32\n",
+        "            nn.InstanceNorm2d(128),\n",
+        "            nn.LeakyReLU(0.2, inplace=True),\n",
+        "            nn.Conv2d(128, 256, kernel_size=4, stride=2, padding=1),  # 32x32 -> 16x16\n",
+        "            nn.InstanceNorm2d(256),\n",
+        "            nn.LeakyReLU(0.2, inplace=True),\n",
+        "            nn.Conv2d(256, 512, kernel_size=4, stride=2, padding=1),  # 16x16 -> 8x8\n",
+        "            nn.InstanceNorm2d(512),\n",
+        "            nn.LeakyReLU(0.2, inplace=True),\n",
+        "            nn.Conv2d(512, 1, kernel_size=3, stride=1, padding=1),  # 8x8 -> 8x8\n",
+        "            nn.Sigmoid()\n",
+        "        )\n",
+        "\n",
+        "    def forward(self, x):\n",
+        "        return self.model(x)"
+      ],
+      "metadata": {
+        "id": "ucUPG-Rh1iYL"
+      },
+      "execution_count": 27,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Labels with smoothing\n",
+        "real_label = torch.full((batch_size, 1, 8, 8), 0.9).to(device)\n",
+        "fake_label = torch.full((batch_size, 1, 8, 8), 0.1).to(device)"
+      ],
+      "metadata": {
+        "id": "JHKvZ0Mk1oOA"
+      },
+      "execution_count": 28,
+      "outputs": []
     }
   ],
   "metadata": {
