added Step 1: Imports and Setup

--- a/MRtoCT.ipynb
+++ b/MRtoCT.ipynb
@@ -57,7 +57,7 @@
         "id": "LKGesVpQlUAQ",
         "outputId": "c1c0e8a2-e279-4610-b2e9-4d62ae88e856"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -249,7 +249,7 @@
         "id": "zguh2LFwmKsO",
         "outputId": "6174bbf0-8476-4681-8ecd-c48e9b452020"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -438,7 +438,7 @@
       "metadata": {
         "id": "Om4Wj5aSmhgz"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -486,7 +486,7 @@
       "metadata": {
         "id": "N_ni58W4sMbv"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -570,7 +570,7 @@
         "id": "rAvUEYpMscDe",
         "outputId": "f3ec2b4f-9f22-4e4d-83fb-4b68a2e147a2"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -739,7 +739,7 @@
         "id": "COy87Hh7wsB_",
         "outputId": "411fce06-e553-4696-d301-45307b186643"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -752,6 +752,24 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# New"
+      ],
+      "metadata": {
+        "id": "IeYYy1X4uebl"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Step 1: Imports and Setup"
+      ],
+      "metadata": {
+        "id": "thKEMW2queIT"
+      }
     }
   ],
   "metadata": {
