Generator (3D ResNet-based)

--- a/MRtoCT.ipynb
+++ b/MRtoCT.ipynb
@@ -1112,6 +1112,74 @@
       "metadata": {
         "id": "IIsLbciRvSFl"
       }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Generator (3D ResNet-based)"
+      ],
+      "metadata": {
+        "id": "UE1RN5dBvg_-"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class ResidualBlock3D(nn.Module):\n",
+        "    def __init__(self, channels):\n",
+        "        super(ResidualBlock3D, self).__init__()\n",
+        "        self.conv = nn.Sequential(\n",
+        "            nn.Conv3d(channels, channels, kernel_size=3, padding=1),\n",
+        "            nn.InstanceNorm3d(channels),\n",
+        "            nn.ReLU(inplace=True),\n",
+        "            nn.Conv3d(channels, channels, kernel_size=3, padding=1),\n",
+        "            nn.InstanceNorm3d(channels)\n",
+        "        )\n",
+        "\n",
+        "    def forward(self, x):\n",
+        "        return x + self.conv(x)  # Residual connection\n",
+        "\n",
+        "class Generator3D(nn.Module):\n",
+        "    def __init__(self):\n",
+        "        super(Generator3D, self).__init__()\n",
+        "        self.encoder = nn.Sequential(\n",
+        "            nn.Conv3d(1, 64, kernel_size=4, stride=2, padding=1),\n",
+        "            nn.InstanceNorm3d(64),\n",
+        "            nn.ReLU(inplace=True)\n",
+        "        )\n",
+        "        self.res_blocks = nn.Sequential(*[ResidualBlock3D(64) for _ in range(6)])\n",
+        "        self.decoder = nn.Sequential(\n",
+        "            nn.ConvTranspose3d(64, 1, kernel_size=4, stride=2, padding=1),\n",
+        "            nn.Tanh()\n",
+        "        )\n",
+        "\n",
+        "    def forward(self, x):\n",
+        "        x = self.encoder(x)\n",
+        "        x = self.res_blocks(x)\n",
+        "        x = self.decoder(x)\n",
+        "        return x\n",
+        "\n",
+        "# Discriminators (Appearance and Structure)\n",
+        "class Discriminator3D(nn.Module):\n",
+        "    def __init__(self):\n",
+        "        super(Discriminator3D, self).__init__()\n",
+        "        self.model = nn.Sequential(\n",
+        "            nn.Conv3d(1, 64, kernel_size=4, stride=2, padding=1),\n",
+        "            nn.LeakyReLU(0.2, inplace=True),\n",
+        "            nn.Conv3d(64, 128, kernel_size=4, stride=2, padding=1),\n",
+        "            nn.InstanceNorm3d(128),\n",
+        "            nn.LeakyReLU(0.2, inplace=True),\n",
+        "            nn.Conv3d(128, 1, kernel_size=4, stride=1, padding=0)\n",
+        "        )\n",
+        "\n",
+        "    def forward(self, x):\n",
+        "        return self.model(x)"
+      ],
+      "metadata": {
+        "id": "ujUh3C9QvVzH"
+      },
+      "execution_count": 7,
+      "outputs": []
     }
   ],
   "metadata": {
