added Step 5: Training Strategy

--- a/MRtoCT.ipynb
+++ b/MRtoCT.ipynb
@@ -1180,6 +1180,50 @@
       },
       "execution_count": 7,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Step 4: Loss Functions"
+      ],
+      "metadata": {
+        "id": "1WbKsRx5vlUc"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Loss functions\n",
+        "adversarial_loss = nn.BCEWithLogitsLoss()\n",
+        "cycle_loss = nn.L1Loss()\n",
+        "\n",
+        "# Initialize networks\n",
+        "G_cm = Generator3D()  # MR-to-CT\n",
+        "G_mc = Generator3D()  # CT-to-MR\n",
+        "D_c_app = Discriminator3D()  # CT Appearance\n",
+        "D_m_app = Discriminator3D()  # MR Appearance\n",
+        "D_c_str = Discriminator3D()  # CT Structure\n",
+        "D_m_str = Discriminator3D()  # MR Structure\n",
+        "\n",
+        "# Optimizers\n",
+        "optimizer_G = optim.Adam(list(G_cm.parameters()) + list(G_mc.parameters()), lr=2e-4, betas=(0.5, 0.999))\n",
+        "optimizer_D_app = optim.Adam(list(D_c_app.parameters()) + list(D_m_app.parameters()), lr=2e-4, betas=(0.5, 0.999))\n",
+        "optimizer_D_str = optim.Adam(list(D_c_str.parameters()) + list(D_m_str.parameters()), lr=2e-4, betas=(0.5, 0.999))"
+      ],
+      "metadata": {
+        "id": "T82zWjSqvpid"
+      },
+      "execution_count": 8,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Step 5: Training Strategy"
+      ],
+      "metadata": {
+        "id": "OLd-pNkrvs2k"
+      }
     }
   ],
   "metadata": {
